crates/engine/src/parser/oracle_effect/snapshots/engine__parser__oracle_effect__snapshot_tests__delayed_trigger_next_end_step_sacrifice.snap
---
source: crates/engine/src/parser/oracle_effect/mod.rs
expression: def
---
{
  "kind": "Spell",
  "effect": {
    "type": "CreateDelayedTrigger",
    "condition": {
      "type": "AtNextPhase",
      "phase": "End"
    },
    "effect": {
      "kind": "Spell",
      "effect": {
        "type": "Sacrifice",
        "target": {
          "type": "ParentTarget"
        },
        "count": {
          "type": "Fixed",
          "value": 1
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": null,
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    "uses_tracked_set": false
  },
  "cost": null,
  "sub_ability": null,
  "duration": null,
  "description": null,
  "target_prompt": null,
  "condition": null,
  "optional_targeting": false,
  "optional": false,
  "forward_result": false
}
